[gd_scene load_steps=16 format=2]

[ext_resource path="res://challenges/week14/gfx/table/table.webp" type="Texture" id=1]
[ext_resource path="res://challenges/week4/gfx/map/background.jpg" type="Texture" id=2]
[ext_resource path="res://challenges/week14/scenes/deck/deck.tscn" type="PackedScene" id=3]
[ext_resource path="res://challenges/week14/scenes/main.gd" type="Script" id=4]
[ext_resource path="res://challenges/week14/scenes/player/player.tscn" type="PackedScene" id=5]
[ext_resource path="res://common/scenes/finishGame.tscn" type="PackedScene" id=6]
[ext_resource path="res://common/fonts/PressStart2P-Regular.ttf" type="DynamicFontData" id=7]
[ext_resource path="res://challenges/week14/scenes/select_num_players/select_num_players.tscn" type="PackedScene" id=8]
[ext_resource path="res://common/sfx/button/191592__leszek-szary__menu-button.mp3" type="AudioStream" id=9]
[ext_resource path="res://common/sfx/win/finish_521640__fupicat__winbanjo.ogg" type="AudioStream" id=10]
[ext_resource path="res://common/sfx/error/error.wav" type="AudioStream" id=11]
[ext_resource path="res://common/sfx/ball/ball_in_hole.mp3" type="AudioStream" id=12]
[ext_resource path="res://common/sfx/whoosh/whoosh.mp3" type="AudioStream" id=13]

[sub_resource type="DynamicFont" id=2]
size = 8
font_data = ExtResource( 7 )

[sub_resource type="DynamicFont" id=1]
outline_size = 1
outline_color = Color( 0, 0, 0, 1 )
font_data = ExtResource( 7 )

[node name="main" type="Node"]
script = ExtResource( 4 )

[node name="background" type="Sprite" parent="."]
texture = ExtResource( 2 )
centered = false

[node name="table" type="Sprite" parent="."]
texture = ExtResource( 1 )
centered = false

[node name="deck" parent="." instance=ExtResource( 3 )]

[node name="hand" type="Node2D" parent="."]

[node name="players" type="Node2D" parent="."]

[node name="table_clip_mask" type="ColorRect" parent="players"]
margin_left = 383.0
margin_right = 1024.0
margin_bottom = 600.0
rect_clip_content = true
mouse_filter = 2
color = Color( 1, 1, 1, 0 )

[node name="human_player" parent="players/table_clip_mask" instance=ExtResource( 5 )]
position = Vector2( -383, 0 )

[node name="DeckPosition" type="Position2D" parent="."]
position = Vector2( 164, 239 )

[node name="WinnerSuitCardPosition" type="Position2D" parent="."]
position = Vector2( 164, 338 )

[node name="PlayerDownPosition" type="Position2D" parent="."]
position = Vector2( 712, 598 )

[node name="PlayerUpPosition" type="Position2D" parent="."]
position = Vector2( 712, -8 )

[node name="PlayerLeftPosition" type="Position2D" parent="."]
position = Vector2( 376, 293 )

[node name="PlayerRightPosition" type="Position2D" parent="."]
position = Vector2( 1029, 293 )

[node name="CenterTablePosition" type="Position2D" parent="."]
position = Vector2( 712, 293 )

[node name="finishGame" parent="." instance=ExtResource( 6 )]
visible = false

[node name="PickUp_button" type="Button" parent="."]
margin_left = 38.0
margin_top = 529.0
margin_right = 136.0
margin_bottom = 567.0
custom_fonts/font = SubResource( 2 )
text = "Pick up card"

[node name="Pass_turn_button" type="Button" parent="."]
margin_left = 158.0
margin_top = 529.0
margin_right = 266.0
margin_bottom = 567.0
custom_fonts/font = SubResource( 2 )
text = "Pass turn"

[node name="players_name" type="Node2D" parent="."]
z_index = 999

[node name="human_player" type="Label" parent="players_name"]
margin_left = 396.0
margin_top = 567.0
margin_right = 444.0
margin_bottom = 583.0
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 1 )
text = "You"

[node name="player_right" type="Label" parent="players_name"]
margin_left = 1005.0
margin_top = 432.0
margin_right = 1309.0
margin_bottom = 467.0
rect_rotation = -90.0
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 1 )
text = "PlayerRightPosition
"

[node name="player_up" type="Label" parent="players_name"]
margin_left = 584.0
margin_top = 4.0
margin_right = 840.0
margin_bottom = 20.0
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 1 )
text = "PlayerUpPosition"

[node name="player_left" type="Label" parent="players_name"]
margin_left = 416.0
margin_top = 135.0
margin_right = 704.0
margin_bottom = 151.0
rect_rotation = 90.0
custom_colors/font_color = Color( 0.666667, 0.666667, 0.666667, 1 )
custom_fonts/font = SubResource( 1 )
text = "PlayerLeftPosition"

[node name="select_num_players" parent="." instance=ExtResource( 8 )]
visible = false
z_index = 999

[node name="sfx" type="Node" parent="."]

[node name="SelectCardSound" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 9 )
volume_db = -10.0

[node name="WinSound" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 10 )
volume_db = -5.0

[node name="LoseSound" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 11 )
volume_db = -15.0

[node name="DrawSound" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 12 )

[node name="FinishHandSound" type="AudioStreamPlayer" parent="sfx"]
stream = ExtResource( 13 )
volume_db = -10.0

[connection signal="ready_to_start" from="." to="." method="_on_main_ready_to_start"]
[connection signal="picked_up_card" from="players/table_clip_mask/human_player" to="." method="_on_human_player_picked_up_card"]
[connection signal="pressed" from="PickUp_button" to="." method="_on_Robar_pressed"]
[connection signal="pressed" from="Pass_turn_button" to="." method="_on_Pass_turn_button_pressed"]
[connection signal="num_players_selected" from="select_num_players" to="." method="_on_select_num_players_num_players_selected" flags=6]
